# HecOpt

./: Grand Challenges at the Intersection of Artificial Intelligence and Operations Research_ A Blueprint for Open-Source Innovation.md  LICENSE  README.md  dfl_deep_dive.md  dys_net_spo_sce_documentation.md  pyproject.toml  tabu_searh_in_DFL.md
examples/: pricing_example.py  shortest_path_example.py
hecopt/: __init__.py
hecopt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hecopt/baselines/: __init__.py  pricing.py  shortest_path.py
hecopt/core/: __init__.py  base.py  combinatorial.py  nonlinear.py
hecopt/losses/: __init__.py  hybrid.py  pfyl.py  spo_plus.py
hecopt/utils/: __init__.py  kkt.py
tests/: test_base.py  test_baselines.py  test_combinatorial.py  test_losses.py  test_nonlinear.py
