[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hecopt"
version = "0.1.0"
description = "Unified End-to-End Predict-Then-Optimize Library for Combinatorial and Non-Linear Decision-Focused Learning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "HecOpt Contributors" }]
keywords = [
    "predict-then-optimize",
    "decision-focused-learning",
    "operations-research",
    "machine-learning",
    "combinatorial-optimization",
    "non-linear-programming",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
examples = [
    "matplotlib>=3.6.0",
    "networkx>=3.0",
    "tqdm>=4.64.0",
]
all = ["hecopt[dev,examples]"]

[project.urls]
Homepage = "https://github.com/hecopt/hecopt"
Documentation = "https://hecopt.readthedocs.io"
"Bug Tracker" = "https://github.com/hecopt/hecopt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hecopt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
